@@ -53,6 +53,11 @@ void ActionScrollLeft(int* params);
 void ActionScrollRight(int* params);
 void ActionScrollUp(int* params);
 void ActionScrollDown(int* params);
+void ActionWalkLeft(int* params);
+void ActionWalkRight(int* params);
+void ActionWalkUp(int* params);
+void ActionWalkDown(int* params);
+void ActionStopWalking(int* params);
 void ActionCenter(int* params);
 void ActionShapeBrowser(int* params);
 void ActionCreateShape(int* params);
